@@ -1,6 +1,8 @@
 2004-03-29  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmParser.cxx: removal of all TAB character. Indentation fixed.
      * src/gdcmUtil.cxx: added forgotten iostream include.  
+     * src/gdcmCommon.h: FileType enum entry DICOMDIR removed (since 
+       equivalent to ExplicitVR in existing code).
 
 2004-03-27  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmUtil.[cxx|h] split in two. Additional file gdcmGlobal.[cxx|h]
